--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,8 @@
     <string name="title_naoconfirmado">Não Confirmaram</string>
     <string name="title_naosabe">Não Sabem</string>
     <string name="title_total">Total Convidados</string>
+    <string name="title_dividas">Status das Dividas</string>
+    <string name="title_convidados">Status dos Convidados</string>
     <string name="title_divida">Adicionar Divida</string>
     <string name="title_activity_add_debito">AddDebito</string>
     <string name="nomedadivida">Nome da Dívida</string>
@@ -41,6 +43,10 @@
     <string name="ok">Ok</string>
     <string name="cancel">Cancelar</string>
     <string name="menu_settings">Settings</string>
+    <string name="datainvalida">Data Inválida</string>
+
+    <string name="div_pagas">Dívidas Pagas</string>
+    <string name="div_pendentes">Dívidas Pendentes</string>
 
     <string name="submit_label">Submit</string>
     <string name="title_activity_foursquare_venue_list">FoursquareVenueList</string>
@@ -53,5 +59,6 @@
 
     <string name="myforne">Meus Fornecedores</string>
     <string name="textforn">Deseja adicionar este fornecedor como devedor?</string>
+    <string name="txtDividacriada">Dívida Adicionada.</string>
 
 </resources>
