--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Coisa de Noiva</string>
+    <string name="app_name">Bride\'s Thing</string>
     <string name="title_section1">Section 1</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
-    <string name="action_incluir">Novo</string>
-    <string name="action_trash">Excluir</string>
-    <string name="action_save">Salvar</string>
-    <string name="action_edit">Editar</string>
+    <string name="action_incluir">New</string>☺
+    <string name="action_trash">Remove</string>
+    <string name="action_save">Save</string>
+    <string name="action_edit">Edit</string>☺
     <string name="action_settings">settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="action_email">Enviar por Email</string>
-    <string name="action_add">Novo</string>
-    <string name="alert_yes">Sim</string>
-    <string name="alert_no">Não</string>
-    <string name="mss_alert">Você tem certeza que quer deletar?</string>
-    <string name="title_alert">Corfirmação</string>
+    <string name="action_email">Send by Email</string>
+    <string name="action_add">New</string>
+    <string name="alert_yes">Yes</string>
+    <string name="alert_no">No</string>
+    <string name="mss_alert">Are you sure you want to delete?</string>
+    <string name="title_alert">Confirmation</string>
     <string name="title_activity_tab_host_fragment">TabHostFragment</string>
     <string name="title_activity_my_tab_factory">MyTabFactory</string>
     <string name="title_activity_my_page_adapter">MyPageAdapter</string>
@@ -28,25 +28,25 @@
     <string name="title_activity_principal">PrincipalActivity</string>
     <string name="title_activity_menu">MenuActivity</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_configuracao">Configuracao</string>
-    <string name="title_confirmado">Confirmaram</string>
-    <string name="title_naoconfirmado">Não Confirmaram</string>
-    <string name="title_naosabe">Não Sabem</string>
-    <string name="title_total">Total Convidados</string>
-    <string name="title_dividas">Status das Dividas</string>
-    <string name="title_convidados">Status dos Convidados</string>
-    <string name="title_divida">Adicionar Divida</string>
-    <string name="title_activity_add_debito">AddDebito</string>
-    <string name="nomedadivida">Nome da Dívida</string>
-    <string name="valorparcela">Valor da Parcela</string>
-    <string name="addparcela">Adicione a Parcela</string>
+    <string name="title_activity_configuracao">Configuration</string>
+    <string name="title_confirmado">Confirmed</string>
+    <string name="title_naoconfirmado">Not Confirmed</string>
+    <string name="title_naosabe">They don\'t know</string>
+    <string name="title_total">All Guests</string>
+    <string name="title_dividas">Status of Debt</string>
+    <string name="title_convidados">Status of Guests</string>
+    <string name="title_divida">Add Debt</string>
+    <string name="title_activity_add_debito">Debt</string>
+    <string name="nomedadivida">Name of the Debt</string>
+    <string name="valorparcela">installments value</string>
+    <string name="addparcela">Add a installment</string>
     <string name="ok">Ok</string>
-    <string name="cancel">Cancelar</string>
+    <string name="cancel">Cancel</string>
     <string name="menu_settings">Settings</string>
-    <string name="datainvalida">Data Inválida</string>
+    <string name="datainvalida">Invalid date</string>
 
-    <string name="div_pagas">Dívidas Pagas</string>
-    <string name="div_pendentes">Dívidas Pendentes</string>
+    <string name="div_pagas">Paid Debts</string>
+    <string name="div_pendentes">Outstanding debts</string>
 
     <string name="submit_label">Submit</string>
     <string name="title_activity_foursquare_venue_list">FoursquareVenueList</string>
@@ -59,13 +59,35 @@
 
     <string name="myforne">Meus Fornecedores</string>
     <string name="textforn">Deseja adicionar este fornecedor como devedor?</string>
-    <string name="txtDividacriada">Dívida Adicionada.</string>
-    <string name="numparcelasinvalidas">O número de parcelas pagas não pode ser maior que o total de parcelas</string>
-    <string name="valortotal">Valor Total</string>
-    <string name="pendente">Valor Pendente</string>
-    <string name="pago">Valor Pago</string>
+    <string name="txtDividacriada">Debt Added.</string>
+    <string name="numparcelasinvalidas">The number of installments paid may not be greater than the total number of parcels</string>
+    <string name="valortotal">Total Value</string>
+    <string name="pendente">Outstanding Value</string>
+    <string name="pago">Paid Value</string>
 
     <string name="faltamhome">There are only</string>
     <string name="frasehome">To The Big Day!</string>
     <string name="diashome">Days Left</string>
+
+    <string name="NomedaDvida">Debt name</string>
+    <string name="ValordaParcela">installment value</string>
+    <string name="QuantidadesdeParcelas">Installment amounts</string>
+    <string name="ParcelasPagas">Paid installments</string>
+    <string name="NomedaNoiva">Bride\'s Name</string>
+    <string name="NomedoNoivo">Groom\'s Name</string>
+    <string name="datadocasamento">Date Wedding</string>
+    <string name="nomenoconvite">Guest\'s Name</string>
+    <string name="numerodeconvidados">Total of Guest</string>
+    <string name="quantidadeconvidados">Number of Guest</string>
+
+    <string name="danoiva">Bride</string>
+    <string name="donoivo">Groom</string>
+    <string name="confirmoupresença">Is attending?</string>
+    <string name="sim">Yes</string>
+    <string name="no">No</string>
+    <string name="talvez">Maybe</string>
+    <string name="convidadode">Guest</string>
+    <string name="vezes">  times</string>
+    <string name="pagas">   paid</string>
+
 </resources>
