--- a/app/src/main/res/values-es-rUS/strings.xml
+++ b/app/src/main/res/values-es-rUS/strings.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Bride\'s Thing</string>
+    <string name="app_name">novia cosa</string>
     <string name="title_section1">Section 1</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
-    <string name="action_incluir">New</string>☺
-    <string name="action_trash">Remove</string>
-    <string name="action_save">Save</string>
-    <string name="action_edit">Edit</string>☺
-    <string name="action_settings">settings</string>
+    <string name="action_incluir">nuevo</string>
+    <string name="action_trash">borrar</string>
+    <string name="action_save">guardar</string>
+    <string name="action_edit">editar</string>
+    <string name="action_settings">ajustes</string>
     <string name="hello_world">Hello world!</string>
-    <string name="action_email">Send by Email</string>
-    <string name="action_add">New</string>
-    <string name="alert_yes">Yes</string>
-    <string name="alert_no">No</string>
-    <string name="mss_alert">Are you sure you want to delete?</string>
-    <string name="title_alert">Confirmation</string>
+    <string name="action_email">Enviar por Email</string>
+    <string name="action_add">nuevo</string>
+    <string name="alert_yes">sí</string>
+    <string name="alert_no">no</string>
+    <string name="mss_alert">¿Seguro que quiere eliminar?</string>
+    <string name="title_alert">confirmación</string>
     <string name="title_activity_tab_host_fragment">TabHostFragment</string>
     <string name="title_activity_my_tab_factory">MyTabFactory</string>
     <string name="title_activity_my_page_adapter">MyPageAdapter</string>
@@ -28,25 +28,25 @@
     <string name="title_activity_principal">PrincipalActivity</string>
     <string name="title_activity_menu">MenuActivity</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_configuracao">Configuration</string>
-    <string name="title_confirmado">Confirmed</string>
-    <string name="title_naoconfirmado">Not Confirmed</string>
-    <string name="title_naosabe">They don\'t know</string>
-    <string name="title_total">All Guests</string>
-    <string name="title_dividas">SStatus of Debt</string>
-    <string name="title_convidados">Status of Guests</string>
-    <string name="title_divida">Add Debt</string>
-    <string name="title_activity_add_debito">AddDebito</string>
-    <string name="nomedadivida">Name of the Debt</string>
-    <string name="valorparcela">installments value</string>
-    <string name="addparcela">Add a installment</string>
-    <string name="ok">Ok</string>
-    <string name="cancel">Cancel</string>
-    <string name="menu_settings">Settings</string>
-    <string name="datainvalida">Invalid date</string>
+    <string name="title_activity_configuracao">configuración</string>
+    <string name="title_confirmado">confirmado</string>
+    <string name="title_naoconfirmado">no se ha confirmado</string>
+    <string name="title_naosabe">no sabe</string>
+    <string name="title_total">Total de huéspedes</string>
+    <string name="title_dividas">Situación de la deuda</string>
+    <string name="title_convidados">Estatuto de los huéspedes</string>
+    <string name="title_divida">Añadir Divide</string>
+    <string name="title_activity_add_debito">deudas</string>
+    <string name="nomedadivida">nombre de la deuda</string>
+    <string name="valorparcela">Porcentaje de Valor</string>
+    <string name="addparcela">Añadir parcela</string>
+    <string name="ok">Está bem</string>
+    <string name="cancel">cancelar</string>
+    <string name="menu_settings">ajustes</string>
+    <string name="datainvalida">fecha no válida</string>
 
-    <string name="div_pagas">Paid Debts</string>
-    <string name="div_pendentes">Outstanding debts</string>
+    <string name="div_pagas">A cargo de la deuda</string>
+    <string name="div_pendentes">Las deudas pendientes</string>
 
     <string name="submit_label">Submit</string>
     <string name="title_activity_foursquare_venue_list">FoursquareVenueList</string>
@@ -59,13 +59,35 @@
 
     <string name="myforne">Meus Fornecedores</string>
     <string name="textforn">Deseja adicionar este fornecedor como devedor?</string>
-    <string name="txtDividacriada">Debt Added.</string>
-    <string name="numparcelasinvalidas">The number of installments paid may not be greater than the total number of parcels</string>
-    <string name="valortotal">Total Value</string>
-    <string name="pendente">Outstanding Value</string>
-    <string name="pago">Paid Value</string>
+    <string name="txtDividacriada">Agregado deuda.</string>
+    <string name="numparcelasinvalidas">El número de cuotas pagadas no puede ser mayor que el número total de parcelas</string>
+    <string name="valortotal">Valor Total</string>
+    <string name="pendente">A la espera de valor</string>
+    <string name="pago">Importe pagado</string>
 
-    <string name="faltamhome">There are only</string>
-    <string name="frasehome">To The Big Day!</string>
-    <string name="diashome">Days Left</string>
+    <string name="faltamhome">faltan</string>
+    <string name="frasehome">para el gran día!</string>
+    <string name="diashome">días</string>
+
+    <string name="NomedaDvida">nombre de la deuda</string>
+    <string name="ValordaParcela">Porcentaje de Valor</string>
+    <string name="QuantidadesdeParcelas">Cantidades a plazos</string>
+    <string name="ParcelasPagas">cuotas pagadas</string>
+    <string name="NomedaNoiva">Nombre de la novia</string>
+    <string name="NomedoNoivo">Nombre del novio</string>
+    <string name="datadocasamento">fecha de la boda</string>
+    <string name="nomenoconvite">Nombre de la Invitación</string>
+    <string name="numerodeconvidados">Los números de los huéspedes</string>
+    <string name="quantidadeconvidados">cantidad</string>
+
+    <string name="danoiva">novia</string>
+    <string name="donoivo">novio</string>
+    <string name="confirmoupresença">Asiste?</string>
+    <string name="sim">Sí</string>
+    <string name="no">No</string>
+    <string name="talvez">tal vez</string>
+
+    <string name="convidadode">Invitado de (la)</string>
+    <string name="vezes">  veces</string>
+    <string name="pagas">   pagado</string>
 </resources>
