--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,18 +2,11 @@
 <resources>
 
     <string name="app_name">Coisa de Noiva</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="action_example">Example action</string>
     <string name="action_incluir">Novo</string>
     <string name="action_trash">Excluir</string>
     <string name="action_save">Salvar</string>
     <string name="action_edit">Editar</string>
-    <string name="action_settings">settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Novo Convidado</string>
     <string name="action_email">Enviar por Email</string>
     <string name="action_add">Novo</string>
     <string name="alert_yes">Sim</string>
@@ -27,8 +20,8 @@
     <string name="title_activity_main_activity2">MainActivity2</string>
     <string name="title_activity_principal">PrincipalActivity</string>
     <string name="title_activity_menu">MenuActivity</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_configuracao">Configuracao</string>
+
+    <string name="title_activity_configuracao">Configuração</string>
     <string name="title_confirmado">Confirmaram</string>
     <string name="title_naoconfirmado">Não Confirmaram</string>
     <string name="title_naosabe">Não Sabem</string>
@@ -36,26 +29,18 @@
     <string name="title_dividas">Status das Dividas</string>
     <string name="title_convidados">Status dos Convidados</string>
     <string name="title_divida">Adicionar Divida</string>
-    <string name="title_activity_add_debito">AddDebito</string>
+    <string name="title_activity_add_debito">Nova Dívida</string>
     <string name="nomedadivida">Nome da Dívida</string>
     <string name="valorparcela">Valor da Parcela</string>
     <string name="addparcela">Adicione a Parcela</string>
     <string name="ok">Ok</string>
     <string name="cancel">Cancelar</string>
-    <string name="menu_settings">Settings</string>
+
     <string name="datainvalida">Data Inválida</string>
 
     <string name="div_pagas">Dívidas Pagas</string>
     <string name="div_pendentes">Dívidas Pendentes</string>
 
-    <string name="submit_label">Submit</string>
-    <string name="title_activity_foursquare_venue_list">FoursquareVenueList</string>
-
-
-    <string name="title_activity_seleciona_fornecedor">Selecionar Fornecedores</string>
-
-    <string name="connectionmsg">Sem conexão de dados</string>
-    <string name="returnmsg">sem dados</string>
 
     <string name="myforne">Meus Fornecedores</string>
     <string name="textforn">Deseja adicionar este fornecedor como devedor?</string>
@@ -64,4 +49,31 @@
     <string name="valortotal">Valor Total</string>
     <string name="pendente">Valor Pendente</string>
     <string name="pago">Valor Pago</string>
+
+    <string name="faltamhome">Faltam</string>
+    <string name="frasehome">Para o Grande Dia!</string>
+    <string name="diashome">Dias</string>
+
+    <string name="NomedaDvida">Nome da Dívida</string>
+    <string name="ValordaParcela">Valor da Parcela</string>
+    <string name="QuantidadesdeParcelas">Quantidades de Parcelas</string>
+    <string name="ParcelasPagas">Parcelas Pagas</string>
+    <string name="NomedaNoiva">Nome da Noiva</string>
+    <string name="NomedoNoivo">Nome do Noivo</string>
+    <string name="datadocasamento">Data do Casamento</string>
+    <string name="nomenoconvite">Nome no Convite</string>
+    <string name="numerodeconvidados">Números de Convidados</string>
+    <string name="quantidadeconvidados">Quantidade</string>
+
+    <string name="danoiva">Noiva</string>
+    <string name="donoivo">Noivo</string>
+    <string name="confirmoupresença">Confirmou presença?</string>
+    <string name="sim">Sim</string>
+    <string name="no">Não</string>
+    <string name="talvez">Talvez</string>
+    <string name="menu_settings">Convidado Novo</string>
+    <string name="convidadode">Convidado da(o)</string>
+
+    <string name="vezes">  vez(es)</string>
+    <string name="pagas">   pagas</string>
 </resources>
